temp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plane-app-ingress
  namespace: plane-ce
  annotations:
    meta.helm.sh/release-name: plane-app
    meta.helm.sh/release-namespace: plane-ce
    nginx.ingress.kubernetes.io/proxy-body-size: 5m
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - plane.luis122448.com
    - minio.plane.luis122448.com
    secretName: plane-app-tls
  rules:
  - host: plane.luis122448.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plane-app-web
            port:
              number: 3000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: plane-app-api
            port:
              number: 8000
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: plane-app-api
            port:
              number: 8000
      - path: /live/
        pathType: Prefix
        backend:
          service:
            name: plane-app-live
            port:
              number: 3000
      - path: /spaces
        pathType: Prefix
        backend:
          service:
            name: plane-app-space
            port:
              number: 3000
      - path: /god-mode
        pathType: Prefix
        backend:
          service:
            name: plane-app-admin
            port:
              number: 3000
      - path: /uploads
        pathType: Prefix
        backend:
          service:
            name: plane-app-minio
            port:
              number: 9000
  - host: minio.plane.luis122448.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plane-app-minio
            port:
              number: 9090
